# saba

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENCE  README.jp.md  README.md  appveyor.yml  main.cpp  mmd2obj.cpp  saba_viewer.cpp  to_utf8.bat  to_utf8.ps1
.github/workflows/: build-linux.yml
cmake/: FindGLFW.cmake
example/: CMakeLists.txt  simple_mmd_viewer_dx11.cpp  simple_mmd_viewer_glfw.cpp  simple_mmd_viewer_vulkan.cpp
example/resource_dx/: build.bat  mmd.fx  mmd.pso.h  mmd.vso.h  mmd_edge.fx  mmd_edge.pso.h  mmd_edge.vso.h  mmd_ground_shadow.fx  mmd_ground_shadow.pso.h  mmd_ground_shadow.vso.h
example/resource_vulkan/: build.bat  mmd.frag  mmd.frag.spv.h  mmd.vert  mmd.vert.spv.h  mmd_edge.frag  mmd_edge.frag.spv.h  mmd_edge.vert  mmd_edge.vert.spv.h  mmd_ground_shadow.frag  mmd_ground_shadow.frag.spv.h  mmd_ground_shadow.vert  mmd_ground_shadow.vert.spv.h
gtests/: Base.File.test.cpp  Base.Log.test.cpp  Base.Path.test.cpp  Base.Singleton.test.cpp  Base.UnicodeUtil.test.cpp  CMakeLists.txt  Viewer.ViewerCommand.test.cpp  main.cpp
gtests/Data/: text_test1.txt  text_test2.txt
gtests/Data/Image/: test.dds  test.tga
gtests/Data/Shader/: include_test2.sh  include_test3.sh  test1.frag  test1.vert  test2.frag  test2.vert  test3.frag  test3.vert  test4.frag  test4.vert  test5.frag  test5.vert
gtests/Data/Shader/common/: common.sh
gtests/GL.test/: GL.ShaderUtil.test.cpp  GL.TextureUtil.test.cpp  GL.VertexUtil.test.cpp  GL.test.cpp  GL.test.h  GLSLUtil.test.cpp
license/gli/: licence.txt
license/glm/: licence.txt
license/glslang/: licence.txt
src/: CMakeLists.txt  main.cpp
src/Base/: CMakeLists.txt  File.cpp  File.h  Path.cpp  Singleton.cpp  Singleton.h  UnicodeUtil.cpp  UnicodeUtil.h
src/Saba/Base/: File.cpp  File.h  Log.cpp  Log.h  Path.cpp  Path.h  Singleton.cpp  Singleton.h  Time.cpp  Time.h  UnicodeUtil.cpp  UnicodeUtil.h
src/Saba/GL/: GLObject.h  GLSLUtil.cpp  GLSLUtil.h  GLShaderUtil.cpp  GLShaderUtil.h  GLTextureUtil.cpp  GLTextureUtil.h  GLVertexUtil.h
src/Saba/GL/Model/MMD/: GLMMDModel.cpp  GLMMDModel.h  GLMMDModelDrawContext.cpp  GLMMDModelDrawContext.h  GLMMDModelDrawer.cpp  GLMMDModelDrawer.h
src/Saba/Model/MMD/: MMDCamera.cpp  MMDCamera.h  MMDFileString.h  MMDIkSolver.cpp  MMDIkSolver.h  MMDMaterial.cpp  MMDMaterial.h  MMDModel.cpp  MMDModel.h  MMDMorph.cpp  MMDMorph.h  MMDNode.cpp  MMDNode.h  MMDPhysics.cpp  MMDPhysics.h  PMDFile.cpp  PMDFile.h  PMDModel.cpp  PMDModel.h  PMXFile.cpp  PMXFile.h  PMXModel.cpp  PMXModel.h  SjisToUnicode.cpp  SjisToUnicode.h  VMDAnimation.cpp  VMDAnimation.h  VMDAnimationCommon.h  VMDCameraAnimation.cpp  VMDCameraAnimation.h  VMDFile.cpp  VMDFile.h  VPDFile.cpp  VPDFile.h
src/Saba/Model/XFile/: XFileModel.cpp  XFileModel.h
src/Saba/Viewer/: Camera.cpp  Grid.h  ModelDrawer.h  Viewer.cpp  Viewer.h  ViewerCommand.cpp  ViewerContext.cpp  ViewerContext.h
src/Saba/Viewer/resource/shader/: mmd.frag  obj_shader.vert
src/Viewer/: Camera.cpp  Camera.h  Grid.cpp  Grid.h  Viewer.cpp  Viewer.h  ViewerContext.cpp  ViewerContext.h  main.cpp
src/Viewer/resource/shader/: bg.vert  grid.frag  grid.vert
tools/: bin2h.py  unzip-sjis.py
viewer/: CMakeLists.txt
viewer/Saba/GL/: GLObject.h  GLSLUtil.cpp  GLSLUtil.h  GLShaderUtil.cpp  GLShaderUtil.h  GLTextureUtil.cpp  GLTextureUtil.h  GLVertexUtil.h
viewer/Saba/GL/Model/MMD/: GLMMDModel.cpp  GLMMDModel.h  GLMMDModelDrawContext.cpp  GLMMDModelDrawContext.h  GLMMDModelDrawer.cpp  GLMMDModelDrawer.h
viewer/Saba/GL/Model/XFile/: GLXFileModel.cpp  GLXFileModel.h  GLXFileModelDrawContext.cpp  GLXFileModelDrawContext.h  GLXFileModelDrawer.cpp  GLXFileModelDrawer.h
viewer/Saba/Viewer/: Camera.cpp  Camera.h  CameraOverrider.cpp  CameraOverrider.h  Grid.cpp  Grid.h  Light.cpp  Light.h  ModelDrawer.cpp  ModelDrawer.h  ShadowMap.cpp  ShadowMap.h  VMDCameraOverrider.cpp  VMDCameraOverrider.h  Viewer.cpp  Viewer.h  ViewerCommand.cpp  ViewerCommand.h  ViewerContext.cpp  ViewerContext.h
viewer/Saba/Viewer/resource/shader/: bg.frag  copy.frag  copy_transparent_window.frag  mmd.frag  mmd.vert  mmd_edge.frag  mmd_edge.vert  mmd_ground_shadow.frag  mmd_plane_shadow.vert  obj_shader.frag  quad.vert  shadow_shader.frag  xfile_shader.frag  xfile_shader.vert
