
file (GLOB BASE_SOURCE Saba/Base/*.cpp)
file (GLOB BASE_HEADER Saba/Base/*.h)

file (GLOB MODEL_OBJ_SOURCE Saba/Model/OBJ/*.cpp)
file (GLOB MODEL_OBJ_HEADER Saba/Model/OBJ/*.h)

file (GLOB MODEL_MMD_SOURCE Saba/Model/MMD/*.cpp)
file (GLOB MODEL_MMD_HEADER Saba/Model/MMD/*.h)

add_library(
    Saba
    ${BASE_SOURCE}
    ${BASE_HEADER}
    ${MODEL_OBJ_SOURCE}
    ${MODEL_OBJ_HEADER}
    ${MODEL_MMD_SOURCE}
    ${MODEL_MMD_HEADER}
)
target_link_libraries(Saba ${BULLET_LIBRARIES})

SOURCE_GROUP(Base FILES ${BASE_SOURCE} ${BASE_HEADER})
SOURCE_GROUP(Model\\OBJ FILES ${MODEL_OBJ_SOURCE} ${MODEL_OBJ_HEADER})
SOURCE_GROUP(Model\\MMD FILES ${MODEL_MMD_SOURCE} ${MODEL_MMD_HEADER})
